Fixing overflowing div

--- a/webinterface/style.css
+++ b/webinterface/style.css
@@ -13,6 +13,7 @@ textarea, #control-main, #topics {
     resize: none;
     width: 100%;
     box-sizing: border-box;
+    overflow: auto;
 }
 
 #control-main {
